--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
     "firebase": "12.0.0",
     "i18next": "25.4.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.6.3",
     "recharts": "3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
