--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@stripe/react-stripe-js": "4.0.2",
     "@supabase/supabase-js": "2.57.4",
     "firebase": "12.0.0",
+    "html2pdf.js": "^0.12.1",
     "i18next": "25.4.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "quill": "^2.0.3",
